fix images that are too large not expanding

--- a/app/assets/stylesheets/jumpstart.css
+++ b/app/assets/stylesheets/jumpstart.css
@@ -122,7 +122,7 @@ body {
 /*landing page*/
 
 .carousel {
-     margin-bottom: 60px;
+     margin-bottom: 20rem;
    }
 
    .carousel .container {
@@ -139,12 +139,9 @@ body {
    .carousel .item {
      height: 500px;
    }
+
    .carousel img {
-     position: absolute;
-     top: 0;
-     left: 0;
-     min-width: 100%;
-     height: 500px;
+      position: fixed;
    }
 
    .carousel-caption {
